# SPOTLIGHT

./: .gitattributes  LICENSE.md  README.md  USAGE.md  input_template.dnvin  install_ubuntu.sh  production_noRL  production_noprotein_RL
dnv/: Doxyfile  core_include.hpp  dnv  production_acceptall.cpp  production_strip.cpp
dnv/data/: definitions.data  definitions_backup.data  definitions_naming.data  dnv.rtp  mark.macro  solvation.data
dnv/data/.gaff_backup/: atomtypes.ffin  atomtypes_template_nocharges.ffin  categories.data  charges.data  definitions.data  testat.ffin
dnv/data/aminoacids/: aminoacids_incpep.ffin  categories.data  categories_final_afterchargeset.data  categories_fullweight.data  categories_good.data  categories_pure.data  protein.rtp  protff.ffin
dnv/data/backups/: definitions_backup.data  ffparm_backup.ffin  ffparm_cefix.ffin
dnv/data/fragments/: debug
dnv/data/gaff/: Atemplate.ffin  atomtypes.ffin  basic_backup.ffin  considerations
dnv/data/itps/: bondtypes_naming.itp  dihedraltypes_unedited.itp  pairtypes.itp
dnv/data/online/: categories.data  definitions_noPS.data  empty.ffin  final_ff_parameters.ffin  final_ff_parameters_noPS.ffin  protein.rtp
dnv/forcefield/: atomtypes.atp  forcefield.hpp  forcefield_precomp.hpp  forcefield_precomp_omega_stable.hpp  forcefield_precomp_omega_stable2.hpp
dnv/forcefield/charmm27/: angletypes.itp  protein.rtp
dnv/forcefield/test/: INPUT.txt  atomtypes.atp  bondtypes.itp  charges.dnvin  ffload  final_ff_parameters.ffin  ljparams.dnvin  out.dnv
dnv/graph/: Atom.hpp  Molecule.hpp  Molecule_oldRNG.h  Molecule_omega1_stable.hpp  Molecule_omega2_stable.hpp  Molecule_precycfix_omega.hpp  dihedraltypes.atp  maths.h
dnv/help/html/: Atom_8hpp_source.html  annotated.html  (+256 more)
dnv/support/: assign_position_to_box.hpp  boxgrid_based_operations.hpp  commons.h  commons_oldRNG.h  commons_omegastable.h  cudarng.h  cudarng_mono.cu  cudarng_mono.h  dictionary.txt  draw.h  extension.hpp  externio.hpp  externio_omega_stable.hpp  extras.hpp  local.h  macros.hpp  molview.h  mr  mytorch.h  openmmsupport.h  physics.hpp  reinforce.hpp  runtime.hpp  tensor.hpp  torchmol.h
docker/: Dockerfile  buildme.sh
scripts/: spotlight-vacgen
spotlight_data/: categories.data  categories_empty.data  empty.ffin  final_ff_parameters.ffin  protein.rtp
spotlight_data/aminoacids/: aminoacids_dnv.ffin  categories.data  charges.data  definitions.data  dnvprotein.rtp  protff.ffin
spotlight_data/gaff/: atomtypes.ffin  categories.data  charges.data  definitions.data  definitions_naming.data  protein.rtp  protff.ffin
spotlight_data/itps/: angletypes.itp  bondtypes.itp  dihedraltypes.itp  impropertypes.itp
spotlight_data/model/: convsave.pt  decsave.pt
spotlight_pt_port/: CMakeLists.txt  autobuild.sh  computecycscore.cpp  convsave.pt  decsave.pt  generate_sample_input.sh  prodprune_pytorch_prot.cpp  production_final.cpp  production_pytorch_prot.cpp  prodvac_pytorch.cpp  prodvac_pytorch_parallelgen.cpp  prodvac_pytorch_parprunegen.cpp  prodvac_pytorch_trainable.cpp  setpaths.sh
test_data/: protein.gro  standard_nonet.dnvin
(+351 files in other folders)
